--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -295,6 +295,15 @@
   "detRevealField": "Anzeigen",
   "detHideField": "Verbergen",
   "detAutoTypeField": "Auto-Type",
+  "detIssuesHideTooltip": "Diese Warnung verstecken",
+  "detIssueWeakPassword": "Das Passwort ist schwach, es wird empfohlen es zu ändern.",
+  "detIssuePoorPassword": "Das Passwort ist schwach, es wird dringend empfohlen es zu ändern.",
+  "detIssuePwnedPassword": "Dieses Passwort wurde laut {} in einem Datenleck gefunden, es wird empfohlen das Passwort zu ändern.",
+  "detIssuePasswordCheckError": "Es gab einen Fehler bei der online-überprüfung des Passwort.",
+  "detIssueOldPassword": "Das Passwort ist alt.",
+  "detIssueCloseAlertHeader": "Verstecke Passwortmeldungen",
+  "detIssueCloseAlertBody": "Es gibt verschiedene Möglichkeiten diese Warnung zu verstecken:",
+  "detIssueCloseAlertEntry": "Nicht für diesen Eintrag anzeigen.",
   "autoTypeEntryFields": "Feld-Platzhalter",
   "autoTypeModifiers": "Hilfstasten",
   "autoTypeKeys": "Tasten",
@@ -325,6 +334,8 @@
   "appSaveError": "Fehler beim Speichern",
   "appSaveErrorBody": "Automatisches Speichern fehlgeschlagen",
   "appSaveErrorBodyMul": "Automatisches Speichern fehlgeschlagen:",
+  "appSaveErrorExitLoseChanges": "Schließen und alle Änderungen verlieren",
+  "appSaveErrorExitLoseChangesBody": "Du kannst entweder die App schließen und alle Änderungen verlieren, oder gehe in die Dateieinstellungen und exportiere die Daten",
   "appSettingsError": "Fehler beim Laden der App",
   "appSettingsErrorBody": "Es gab einen Fehler beim Laden der App-Einstellungen. Bitte überprüfen Sie die App-URL oder kontaktieren Sie Ihren Systemadministrator.",
   "appNotSupportedError": "Ihr Browser unterstützt einige wichtige Funktionen nicht, die für diese App benötigt werden.",
@@ -360,12 +371,25 @@
   "setGenDownloadAndRestart": "Update herunterladen und App neu starten",
   "setGenAppearance": "Oberfläche",
   "setGenTheme": "Theme",
+  "setGenThemeDefault": "Standard",
+  "setGenThemeDark": "Dunkel",
+  "setGenThemeLight": "Hell",
+  "setGenThemeBlue": "Flach blau",
   "setGenThemeFb": "Mattblau",
+  "setGenThemeBl": "Hell blau",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Dunkelbraun",
+  "setGenThemeLb": "Hell braun",
+  "setGenThemeTerminal": "Terminal",
   "setGenThemeTe": "Terminal",
+  "setGenThemeLt": "Hell Terminal",
+  "setGenThemeHighContrast": "Hoher Kontrast",
   "setGenThemeHc": "Hoher Kontrast",
+  "setGenThemeDc": "Dunkel Kontrast",
+  "setGenThemeSol": "Solarized",
   "setGenThemeSd": "Solarisiert dunkel",
   "setGenThemeSl": "Solarisiert hell",
+  "setGenMoreThemes": "Mehr Themes",
   "setGenLocale": "Sprache",
   "setGenLocOther": "Andere Sprachen sind als Plugins verfügbar.",
   "setGenFontSize": "Schriftgröße",
@@ -422,6 +446,12 @@
   "setGenTouchIdMemory": "Nur mit Fingerabdruck entsperren, wenn KeeWeb aktiv ist",
   "setGenTouchIdFile": "Benutze immer den Fingerabdruck anstatt das Master-Passwort",
   "setGenTouchIdPass": "Benötige Master-Passwort nach",
+  "setGenHelpHIBP": "KeeWeb kann überprüfen ob deine Passwörter bei einem früheren Datenleck veröffentlicht wurden. Deine Passwörter können nicht beim übertragen ausgelesen werden, aber die Anzahl der überprüften Passwörter kann möglicherweise entdeckt werden. {} kannst du mehr über den Datenschutz beim Nutzen dieses Dienstes erfahren. Wenn diese Option aktiviert ist überprüft KeeWeb deine Passwörter automatisch.",
+  "setGenHelpHIBPLink": "hier",
+  "setGenAuditPasswordAge": "Alte Passwörter",
+  "setGenAuditPasswordAgeOff": "Zeige keine Warnungen über alte Passwörter",
+  "setGenAuditPasswordAgeOneYear": "Zeige Warnungen für Passwörter die über ein Jahr alt sind",
+  "setGenAuditPasswordAgeYears": "Zeige Warnungen für Passwörter die über {} Jahre alt sind",
   "setFilePath": "Dateipfad",
   "setFileStorage": "Diese Datei wird von {} geladen.",
   "setFileIntl": "Diese Datei ist im internen App-Speicher abgelegt",
