--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "エラー",
+  "oneMinute": "1分後",
+  "minutes": "{}分後",
+  "oneHour": "1時間後",
+  "hours": "{}時間後",
+  "oneDay": "1日後",
+  "days": "{}日後",
+  "oneWeek": "1週間後",
+  "oneMonth": "1ヶ月後",
+  "oneYear": "1年後",
   "cache": "キャッシュ",
   "file": "ファイル",
   "device": "デバイス",
@@ -291,6 +300,8 @@
   "detIssuePoorPassword": "パスワードが非常に弱いです。変更を強く勧めます。",
   "detIssuePwnedPassword": "{}によると、このパスワードはデータ漏洩で晒されています。変更を勧めます。",
   "detIssuePasswordCheckError": "オンラインでパスワードの強度を確認する際、エラーが発生しました。",
+  "detIssueOldPassword": "古いパスワードです",
+  "detIssueCloseAlertEntry": "このエントリーは表示しない",
   "autoTypeEntryFields": "エントリー内のフィールド",
   "autoTypeModifiers": "修飾キー",
   "autoTypeKeys": "キー",
@@ -419,6 +430,7 @@
   "setGenLockAutoType": "自動入力の実行後",
   "setGenLockOrSleep": "コンピュータがロックされたかスリープ状態に移行したとき",
   "setGenStorage": "ストレージ",
+  "setGenDisableOfflineStorage": "オフラインストレージに読み込んだファイルをキャッシュしない",
   "setGenStorageLogout": "ログアウト",
   "setGenShowAdvanced": "高度な設定を表示する",
   "setGenDevTools": "デベロッパーツールを表示する",
@@ -428,8 +440,19 @@
   "setGenShowAppLogs": "アプリのログを表示する",
   "setGenReloadApp": "アプリを再読み込みする",
   "setGenFieldLabelDblClickAutoType": "フィールドの題名をダブルクリックで自動入力する",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Touch IDを使用しない",
+  "setGenTouchIdMemory": "KeeWebが動作中はTouch IDのみで解除する",
+  "setGenTouchIdFile": "マスターパスワードの代わりに常にTouch IDを使用",
+  "setGenAudit": "監査",
   "setGenAuditPasswords": "パスワードの強度に関する警告を表示する",
+  "setGenAuditPasswordEntropy": "パスワードの長さと複雑性を確認",
+  "setGenExcludePinsFromAudit": "123456のような、短い数字のPIN番号ではないか確認",
+  "setGenCheckPasswordsOnHIBP": "{}サービスを利用してパスワードを確認",
   "setGenHelpHIBPLink": "こちら",
+  "setGenAuditPasswordAge": "古いパスワード",
+  "setGenAuditPasswordAgeOff": "古いパスワードについて警告を表示しない",
+  "setGenAuditPasswordAgeOneYear": "パスワードを変更してから1年経過しているときは警告",
   "setGenAuditPasswordAgeYears": "{}年以上前のパスワードに警告を表示する",
   "setFilePath": "ファイルパス",
   "setFileStorage": "{}からファイルをロードしました。",
