--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -294,6 +294,11 @@
   "detRevealField": "Показать",
   "detHideField": "Скрыть",
   "detAutoTypeField": "Автозаполнение",
+  "detIssuesHideTooltip": "Скрыть предупреждения",
+  "detIssueWeakPassword": "Пароль слабый, рекомендуется сменить его.",
+  "detIssuePoorPassword": "Пароль очень слабый, настоятельно рекомендуется сменить его.",
+  "detIssuePwnedPassword": "Этот пароль был скомпрометирован в результате утечки данных согласно {}, рекомендуется изменить его.",
+  "detIssuePasswordCheckError": "При проверке надежности пароля произошла ошибка.",
   "detIssueOldPassword": "Старый пароль.",
   "autoTypeEntryFields": "Поля ввода",
   "autoTypeModifiers": "Клавиши-модификаторы",
@@ -361,6 +366,7 @@
   "setGenDownloadAndRestart": "Скачать обновление и перезагрузить",
   "setGenAppearance": "Внешний вид",
   "setGenTheme": "Тема",
+  "setGenThemeDefault": "По умолчанию",
   "setGenThemeFb": "Синяя",
   "setGenThemeDb": "Темно-коричневая",
   "setGenThemeTe": "Терминал",
@@ -426,8 +432,12 @@
   "setGenTouchIdPass": "Запрашивать мастер-пароль после",
   "setGenAudit": "Аудит",
   "setGenAuditPasswords": "Показывать предупреждения о надежности пароля",
+  "setGenExcludePinsFromAudit": "Никогда не проверять короткие числовые PIN-коды, например 123456.",
+  "setGenCheckPasswordsOnHIBP": "Проверить пароли с помощью онлайн-сервиса {}",
   "setGenAuditPasswordAge": "Старые пароли",
   "setGenAuditPasswordAgeOff": "Не показывать предупреждения о старых паролях",
+  "setGenAuditPasswordAgeOneYear": "Показывать предупреждения для паролей старше 1 года",
+  "setGenAuditPasswordAgeYears": "Показывать предупреждения для паролей старше {} лет",
   "setFilePath": "Путь к файлу",
   "setFileStorage": "Это файл загружен из {}.",
   "setFileIntl": "Этот файл хранится во внутренней памяти приложения",
@@ -596,6 +606,7 @@
   "dropboxSetupDesc": "Для использования Dropbox в отдельном приложении требуется дополнительная настройка. Создайте ваше приложение Dropbox и введите его ключ ниже.",
   "dropboxAppKey": "Ключ приложения Dropbox",
   "dropboxAppKeyDesc": "Скопируйте ключ из своего приложения Dropbox (настройки для разработчиков)",
+  "dropboxAppKeyHint": "ваш ключ приложения",
   "dropboxFolder": "Папка приложения",
   "dropboxFolderDesc": "Если ваше приложения связано со всем хранилищем Dropbox (а не отдельной папкой), введите здесь название папки с файлами kdbx",
   "dropboxFolderSettingsDesc": "Выберите любую папку в Dropbox, где будут храниться файлы (корневая папка по умолчанию)",
@@ -630,5 +641,6 @@
   "yubiKeyTouchRequestedBody": "Прикоснитесь к YubiKey с серийным номером {}",
   "yubiKeyDisabledErrorHeader": "USB отключён",
   "yubiKeyDisabledErrorBody": "YubiKey необходим для открытия этого файла, включите USB-устройства в настройках.",
-  "yubiKeyErrorWithCode": "Ошибка YubiKey, код {}."
+  "yubiKeyErrorWithCode": "Ошибка YubiKey, код {}.",
+  "bioOpenAuthPrompt": "открыть \"{}\""
 }
