--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -301,13 +301,17 @@
   "detIssuePwnedPassword": "{}によると、このパスワードはデータ漏洩で晒されています。変更を勧めます。",
   "detIssuePasswordCheckError": "オンラインでパスワードの強度を確認する際、エラーが発生しました。",
   "detIssueOldPassword": "古いパスワードです",
+  "detIssueCloseAlertHeader": "すでに非表示のパスワード",
+  "detIssueCloseAlertBody": "この警告を非表示にできる方法はいくつかあります:",
   "detIssueCloseAlertEntry": "このエントリーは表示しない",
+  "detIssueCloseAlertSettings": "全体設定を調整",
   "autoTypeEntryFields": "エントリー内のフィールド",
   "autoTypeModifiers": "修飾キー",
   "autoTypeKeys": "キー",
   "autoTypeLink": "その他...",
   "autoTypeError": "自動入力エラー",
   "autoTypeErrorGeneric": "自動入力の実行時にエラーが発生しました: {}",
+  "autoTypeErrorAccessibilityMacOS": "アプリケーションに送られるキー操作を取得しようとしましたが、動作しませんでした。取得できなかったのは権限が足りないか、ここをクリックしてさらなる詳細を確認できます:",
   "autoTypeErrorGlobal": "システムワイドのショートカットを使用するには、パスワードを入力したいアプリをフォーカスしてください",
   "autoTypeErrorNotInstalled": "{}はインストールされていません",
   "autoTypeHeader": "自動入力: 選択",
@@ -380,10 +384,11 @@
   "setGenThemeLb": "ライトブラウン",
   "setGenThemeTerminal": "ターミナル",
   "setGenThemeTe": "ターミナル",
+  "setGenThemeLt": "ターミナルライト",
   "setGenThemeHighContrast": "ハイコントラスト",
   "setGenThemeHc": "ハイコントラスト",
   "setGenThemeDc": "ダークコントラスト",
-  "setGenThemeSol": "ソラリゼーション",
+  "setGenThemeSol": "Solarized",
   "setGenThemeSd": "Solarized ダーク",
   "setGenThemeSl": "Solarized ライト",
   "setGenMoreThemes": "その他のテーマ",
@@ -424,6 +429,7 @@
   "setGenClearSeconds": "{}秒後",
   "setGenClearMinute": "1分後",
   "setGenMinInstead": "アプリを閉じる代わりに最小化する",
+  "setGenMinOnFieldCopy": "フィールドのコピーを最低限にする",
   "setGenLock": "自動ロック",
   "setGenLockMinimize": "アプリが最小化されたとき",
   "setGenLockCopy": "パスワードをコピーした後",
@@ -440,15 +446,18 @@
   "setGenShowAppLogs": "アプリのログを表示する",
   "setGenReloadApp": "アプリを再読み込みする",
   "setGenFieldLabelDblClickAutoType": "フィールドの題名をダブルクリックで自動入力する",
+  "setGenUseLegacyAutoType": "（問題がある場合）以前の自動入力を使用",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Touch IDを使用しない",
   "setGenTouchIdMemory": "KeeWebが動作中はTouch IDのみで解除する",
   "setGenTouchIdFile": "マスターパスワードの代わりに常にTouch IDを使用",
+  "setGenTouchIdPass": "マスターパスワードを要求",
   "setGenAudit": "監査",
   "setGenAuditPasswords": "パスワードの強度に関する警告を表示する",
   "setGenAuditPasswordEntropy": "パスワードの長さと複雑性を確認",
-  "setGenExcludePinsFromAudit": "123456のような、短い数字のPIN番号ではないか確認",
+  "setGenExcludePinsFromAudit": "123456のような、短絡的な数字のPIN番号ではないか確認",
   "setGenCheckPasswordsOnHIBP": "{}サービスを利用してパスワードを確認",
+  "setGenHelpHIBP": "KeeWebではオンラインサービスを利用してあなたのパスワードが以前に漏洩していないのか確認することができます。あなたのパスワードを復号できる形でオンラインに送ることはできませんが、パスワードをチェックした回数は分かってしまうことがあります。このサービスのプライバシーについての詳細は{}を確認してください。このサービスを有効にした場合は、KeeWebは自動的にパスワードをチェックすることになります。",
   "setGenHelpHIBPLink": "こちら",
   "setGenAuditPasswordAge": "古いパスワード",
   "setGenAuditPasswordAgeOff": "古いパスワードについて警告を表示しない",
