--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -36,7 +36,7 @@
   "oneMonth": "1月",
   "oneYear": "1年",
   "cache": "缓存",
-  "file": "密码数据库",
+  "file": "文件",
   "device": "设备",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
@@ -133,18 +133,18 @@
   "listNoAttachments": "没有附件",
   "listAddTemplateHeader": "模版",
   "listAddTemplateBody1": "模版使您能一键创建记录。在模版记录中添加内容然后再次点击 {} 以使用此模版。",
-  "listAddTemplateBody2": "您总能在{}分组中找到您的模版。",
+  "listAddTemplateBody2": "您始终能在 {} 分组中找到您的模版。",
   "searchAddNew": "新建",
   "searchSort": "排序",
   "searchCreated": "创建时间",
-  "searchUpdated": "更新日期",
+  "searchUpdated": "更新时间",
   "searchAttachments": "附件",
   "searchAZ": "从 A {} Z",
   "searchZA": "从 Z {} A",
   "searchON": "从旧 {} 新",
   "searchNO": "从新 {} 旧",
   "searchShiftClickOr": "shift+单击 或",
-  "searchAdvTitle": "开/关 高级搜索",
+  "searchAdvTitle": "切换高级搜索",
   "searchSearchIn": "搜索范围",
   "searchOther": "其他字段",
   "searchProtect": "安全字段",
@@ -160,8 +160,8 @@
   "openDemo": "演示",
   "openGenerate": "生成",
   "openXml": "导入 XML",
-  "openCaps": "大写锁定 开",
-  "openClickToOpen": "点击打开文件",
+  "openCaps": "大写锁定已打开",
+  "openClickToOpen": "点击以打开文件",
   "openKeyFile": "密钥文件",
   "openKeyFileDropbox": "(从 Dropbox)",
   "openDropHere": "拖放文件到此处",
@@ -172,14 +172,14 @@
   "openSelectFileBody": "选择您想打开的文件",
   "openPassFor": "输入密码",
   "openRemoveLastQuestion": "删除本地文件？",
-  "openRemoveLastQuestionBody": "您要删除的文件仅保存在KeeWeb内部, 确认永久删除吗?",
+  "openRemoveLastQuestionBody": "您要删除的文件仅保存在应用内部, 确认永久删除吗?",
   "openRemoveLastQuestionModBody": "您要删除的文件已在本地修改, 确认放弃修改并删除吗?",
   "openLocalFile": "本地文件",
   "openLocalFileBody": "您要打开的文件将存储在当前应用中，您所做的变更不会写回到文件系统中。如果想取回您的数据，请从设置中导出。",
   "openLocalFileDontShow": "不再显示",
   "openWrongFile": "文件损坏",
-  "openWrongFileBody": "不支持此文件格式。KeeWeb 仅支持 KeePass kdbx 格式的数据库文件。",
-  "openKdbFileBody": "您打开的是旧版本 KDB 格式的文件。此版本的 KeeWeb 仅支持新的 kdbx 格式。请使用 KeePass v2 转换格式。",
+  "openWrongFileBody": "不支持此文件格式。此应用仅支持 KeePass 数据库格式文件 (kdbx)。",
+  "openKdbFileBody": "您打开的是旧版本格式的文件 (KDB)。此应用仅支持新格式 (kdbx)。请使用 KeePass v2 转换格式。",
   "openConfigHeader": "{} 设置",
   "openUrl": "URL",
   "openUrlDesc": "https://server/path/file.kdbx, 或 file.kdbx",
@@ -187,7 +187,7 @@
   "openUserDesc": "WebDAV 服务器用户名(如果需要)",
   "openUserPlaceholder": "没有用户名",
   "openPass": "密码",
-  "openPassDesc": "WebDAV 服务器的密码(不是您文件的密码)",
+  "openPassDesc": "WebDAV 服务器的密码（这不是您文件的密码）",
   "openPassPlaceholder": "没有密码",
   "openConfigError": "错误: {}",
   "openConfigErrorNotFound": "文件未找到",
@@ -198,10 +198,10 @@
   "openShowAllFiles": "显示所有文件",
   "openFileNoCacheError": "无法在缓存中找到文件。发生这个现象是由于浏览器缓存被清除。如需打开文件，请将原文件从KeeWeb中移除，并再次添加。",
   "openChalRespHeader": "挑战-应答",
-  "openChalRespLoading": "加载YubiKeys列表",
+  "openChalRespLoading": "加载 YubiKey 列表",
   "openChalRespSelectYubiKey": "选择您要使用的YubiKey",
   "openChalRespErrorEmpty": "找不到YubiKey。",
-  "openChalRespErrorEmptyMac": "第一次在macOS上使用此功能？必须将KeeWeb添加到安全设置的输入监视部分。",
+  "openChalRespErrorEmptyMac": "第一次在 macOS 上使用此功能？KeeWeb 必须被添加到安全性设置的输入监视部分。",
   "detAttDownload": "Shift+点击 附件 按钮下载或按",
   "detAttDelToRemove": "Delete 键删除文件",
   "detAttSave": "另存为",
@@ -241,7 +241,7 @@
   "detAttachments": "附件",
   "detDelFromTrash": "从回收站中删除吗?",
   "detDelFromTrashBody": "删除后将无法恢复。",
-  "detDelFromTrashBodyHint": "想要快速删除回收站内所有内容, 请点击回收站菜单的 清空 图标.",
+  "detDelFromTrashBodyHint": "要快速移除回收站内所有项目，请点击回收站菜单内的清空图标。",
   "detDelToTrash": "删除记录？",
   "detDelToTrashBody": "记录将被移除到回收站。",
   "detFieldCopied": "已复制",
@@ -255,14 +255,14 @@
   "detMenuAddField": "添加 {}",
   "detMenuCopyPassword": "复制密码",
   "detMenuCopyUser": "复制用户名",
-  "detMenuCopyOtp": "复制一次性密码",
-  "detSetupOtp": "一次性密码",
+  "detMenuCopyOtp": "复制一次性代码",
+  "detSetupOtp": "一次性代码",
   "detClone": "制作副本",
   "detCopyEntryToClipboard": "复制所有字段",
   "detClonedName": "复制",
   "detAutoType": "自动输入",
   "detAutoTypeSettings": "自动键入设置",
-  "detAutoTypeEnabled": "此记录启用自动输入",
+  "detAutoTypeEnabled": "对此记录启用自动输入",
   "detAutoTypeSequence": "按键",
   "detAutoTypeInput": "输入",
   "detAutoTypeShortcutsDesc": "{} 或者 {} ，当 KeeWeb未激活时",
@@ -275,7 +275,7 @@
   "detSetupOtpAlertBody2": "2. 按下 {} 对二维码截图",
   "detSetupOtpAlertBody3": "3. 按下 {} 粘贴截图",
   "detSetupOtpAlertBody3Mobile": "3. 选中或者使用下方的“选择 / 扫描”按钮使用你的摄像头进行扫描",
-  "detSetupOtpAlertBody4": "如果你无法扫描二维码，点击 手动输入",
+  "detSetupOtpAlertBody4": "如果您无法扫描二维码，点击 手动输入",
   "detSetupOtpManualButton": "手动输入",
   "detSetupOtpScanButton": "选择 / 扫描",
   "detSetupOtpAlertBodyWith": "按下 {}",
@@ -285,8 +285,8 @@
   "detOtpQrError": "二维码扫描出错",
   "detOtpQrErrorBody": "抱歉，我们无法读取此二维码，请再尝试一次，或者联系应用开发者并提供错误详情。",
   "detOtpQrWrong": "错误的二维码",
-  "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性密码数据。",
-  "detOtpField": "一次性密码",
+  "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性代码数据。",
+  "detOtpField": "一次性代码",
   "detOtpClickToTouch": "点击以产生",
   "detOtpGenerating": "生成中",
   "detOtpTouch": "触摸您的 {}",
@@ -301,12 +301,17 @@
   "detIssuePwnedPassword": "此密码{}已暴露在数据泄露中，建议对其进行更改。",
   "detIssuePasswordCheckError": "在线检查密码强度时出错。",
   "detIssueOldPassword": "这是旧密码",
+  "detIssueCloseAlertHeader": "隐藏密码问题",
+  "detIssueCloseAlertBody": "您可以通过以下几种方法隐藏此警告：",
+  "detIssueCloseAlertEntry": "对该记录不再显示",
+  "detIssueCloseAlertSettings": "调整全局设置",
   "autoTypeEntryFields": "记录字段",
   "autoTypeModifiers": "修饰键",
   "autoTypeKeys": "按键",
   "autoTypeLink": "更多...",
   "autoTypeError": "自动输入出错",
   "autoTypeErrorGeneric": "自动输入时发生一个错误：{}",
+  "autoTypeErrorAccessibilityMacOS": "我们试图将击键发送到应用程序，但似乎不起作用。 这可能是由于缺少权限而发生的，请单击此处阅读有关此内容的更多信息：",
   "autoTypeErrorGlobal": "要使用系统快捷键，请将应用程序的焦点放在需要输入密码的位置",
   "autoTypeErrorNotInstalled": "未安装 {}",
   "autoTypeHeader": "自动输入：选择",
@@ -317,7 +322,7 @@
   "autoTypeSelectionHintAction": "仅输入密码",
   "autoTypeSelectionHintOpt": "仅输入用户名",
   "autoTypeSelectionHintShift": "其它字段",
-  "autoTypeSelectionOtp": "一次性密码",
+  "autoTypeSelectionOtp": "一次性代码",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "您已经通过不安全的连接加载当前应用。其他人可能监控并盗窃您的密码。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
   "appSecWarnBody2": "是的，你的数据库是加密的，但无法保证保证您所获取的应用未被修改。",
@@ -364,7 +369,7 @@
   "setGenExtractingUpdate": "提取更新中...",
   "setGenCheckErr": "下载新版本时发生一个错误",
   "setGenNeverChecked": "从不检查更新",
-  "setGenRestartToUpdate": "重启应用以完成更新",
+  "setGenRestartToUpdate": "重启 KeeWeb 以完成更新",
   "setGenDownloadAndRestart": "下载更新并重启应用",
   "setGenAppearance": "外观",
   "setGenTheme": "主题",
@@ -372,8 +377,9 @@
   "setGenThemeDark": "深色",
   "setGenThemeLight": "浅色",
   "setGenThemeBlue": "淡蓝色",
-  "setGenThemeFb": "蓝灰",
+  "setGenThemeFb": "深蓝",
   "setGenThemeBl": "浅蓝色",
+  "setGenThemeBrown": "巧克力棕",
   "setGenThemeDb": "深棕",
   "setGenThemeLb": "浅棕",
   "setGenThemeTerminal": "终端",
@@ -382,10 +388,11 @@
   "setGenThemeHighContrast": "高对比度",
   "setGenThemeHc": "高对比度",
   "setGenThemeDc": "深色对比",
+  "setGenThemeSol": "太阳黄",
   "setGenThemeSd": "深绿",
   "setGenThemeSl": "浅绿",
   "setGenMoreThemes": "更多主题",
-  "setGenAutoSwitchTheme": "明暗主题自动切换",
+  "setGenAutoSwitchTheme": "可用时在浅色和深色主题间自动切换",
   "setGenLocale": "语言",
   "setGenLocOther": "其他语言可作为插件获得",
   "setGenFontSize": "字体大小",
@@ -401,7 +408,7 @@
   "setGenColorfulIcons": "在列表中显示彩色图标",
   "setGenUseMarkdown": "在备注中显示 Markdown",
   "setGenUseGroupIconForEntries": "新记录自动使用分组图标",
-  "setGenDirectAutotype": "如果仅找到一个匹配的条目，将自动填充",
+  "setGenDirectAutotype": "如果仅找到一个匹配的记录，自动选择它以用于自动键入",
   "setGenFunction": "功能",
   "setGenAutoSyncOnClose": "在关闭程序时自动保存和同步",
   "setGenAutoSyncTimer": "定时自动保存和同步",
@@ -422,12 +429,14 @@
   "setGenClearSeconds": "在 {} 秒后",
   "setGenClearMinute": "在一分钟后",
   "setGenMinInstead": "最小化此应用但不关闭",
+  "setGenMinOnFieldCopy": "字段复制时最小化",
   "setGenLock": "自动锁定",
   "setGenLockMinimize": "应用最小化时",
   "setGenLockCopy": "复制密码时",
   "setGenLockAutoType": "自动输入时",
   "setGenLockOrSleep": "当计算机被锁定或进入睡眠状态",
   "setGenStorage": "存储",
+  "setGenDisableOfflineStorage": "不要在离线存储中缓存已加载的文件",
   "setGenStorageLogout": "退出",
   "setGenShowAdvanced": "显示高级设置",
   "setGenDevTools": "显示开发工具",
@@ -447,8 +456,8 @@
   "setGenAuditPasswords": "显示有关密码强度的警告",
   "setGenAuditPasswordEntropy": "检查密码长度和随机性",
   "setGenExcludePinsFromAudit": "从不检查短数字PIN码，如123456",
-  "setGenCheckPasswordsOnHIBP": "使用联机服务检查密码{}",
-  "setGenHelpHIBP": "KeeWeb可以使用在线服务检查您的密码是否在数据泄露中被泄露。无法根据联机发送的数据恢复您的密码，但是这样检查的密码数可能会暴露。有关使用此服务时的隐私的详细信息，请参见{}。如果启用此选项，KeeWeb将自动检查您的密码。",
+  "setGenCheckPasswordsOnHIBP": "使用 {} 在线服务检查密码",
+  "setGenHelpHIBP": "KeeWeb 可以使用在线服务检查您的密码是否在以往的数据泄露中被暴露。您的密码无法根据联机发送的数据被恢复，但是通过此方式检查的密码数可能会暴露。更多有关使用此服务时您的隐私的信息，请参见{}。如果启用此选项，KeeWeb 将自动检查您的密码。",
   "setGenHelpHIBPLink": "此处",
   "setGenAuditPasswordAge": "旧密码",
   "setGenAuditPasswordAgeOff": "不显示有关旧密码的警告",
@@ -475,7 +484,7 @@
   "setFilePassChange": "如要更改您的密码，请先在确认区域输入",
   "setFilePassChanged": "您的密码已经更改；留空则继续使用原密码",
   "setFilePassNotMatch": "密码不匹配，请重新输入",
-  "setFileKeyFile": "秘钥文件",
+  "setFileKeyFile": "密钥文件",
   "setFileSelKeyFile": "选择一个密钥文件",
   "setFileNames": "密码数据库名称",
   "setFileDefUser": "默认用户名",
@@ -485,7 +494,7 @@
   "setFileHistDisabled": "不保存历史",
   "setFileHistUnlimited": "永久保存历史记录",
   "setFileHistLen": "每项记录保留历史记录的长度限制",
-  "setFileHistSize": "每个密码数据库历史记录的大小限制",
+  "setFileHistSize": "每个文件历史记录的总 MB 大小限制",
   "setFileBackups": "备份",
   "setFileBackupEnable": "备份此文件",
   "setFileBackupPath": "备份路径",
@@ -506,7 +515,7 @@
   "setFileKdfParamsIter": "迭代次数",
   "setFileKdfParamsMem": "内存占用，KB",
   "setFileKdfParamsPar": "并行计算",
-  "setFileKeyChangeForce": "多久后提示更改秘钥文件（天）",
+  "setFileKeyChangeForce": "多久后提示更改密钥文件（天）",
   "setFileUseKeyFile": "使用密钥文件",
   "setFileUseGenKeyFile": "使用生成的密钥文件",
   "setFileUseOldKeyFile": "使用原密钥文件",
@@ -525,7 +534,7 @@
   "setFileFormatVersion": "文件格式",
   "setFileExportRaw": "导出你的密码",
   "setFileExportRawBody": "导出的文件将包含您的密码，在此处不会进行加密。 您是否继续吗？",
-  "setFileDeviceIntro": "一次性密码{}将显示在该应用程序。",
+  "setFileDeviceIntro": "来自此 {} 的一次性代码将显示在该应用内。",
   "setFileDeviceSettings": "设置",
   "setFileYubiKey": "YubiKey",
   "setFileDontUseYubiKey": "不使用YubiKey",
@@ -598,10 +607,10 @@
   "setDevicesYubiKeyToolsStatusChecking": "检测{}是否安装",
   "setDevicesYubiKeyToolsStatusOk": "{} 已安装",
   "setDevicesYubiKeyToolsStatusError": "{} 未安装或无法正常工作",
-  "setDevicesYubiKeyOtpTitle": "一次性密码",
-  "setDevicesYubiKeyOtpDesc": "YubiKey可用于为不同的服务生成一次性密码。",
+  "setDevicesYubiKeyOtpTitle": "一次性代码",
+  "setDevicesYubiKeyOtpDesc": "YubiKey 可用于为不同的服务生成一次性代码。",
   "setDevicesYubiKeyOtpShowIcon": "在开始屏幕上显示图标",
-  "setDevicesYubiKeyOtpAutoOpen": "打开文件时自动加载一次性密码",
+  "setDevicesYubiKeyOtpAutoOpen": "当存在已打开文件时自动加载一次性代码",
   "setDevicesYubiKeyOtpMatchEntries": "在条目中显示匹配的一次性代码",
   "setDevicesYubiKeyChalRespTitle": "挑战/应答",
   "setDevicesYubiKeyChalRespDesc": "也可以在挑战/应答模式下使用YubiKey，以便在YubiKey上驻留一段用于加密文件的私钥。",
@@ -611,7 +620,7 @@
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
-  "setAboutLicComment": "本应用程序及所包含的非公开组件遵守 MIT 许可协议",
+  "setAboutLicComment": "除非另有说明，否则应用本身以及所有包含的组件均遵守 MIT 许可协议",
   "setAboutFirst": "这是是由 {} 开发的开源应用程序，",
   "setAboutSecond": "遵守 {} 许可协议。",
   "setAboutSource": "源码及缺陷报告托管于 {} 。",
@@ -628,11 +637,11 @@
   "setHelpWebApp": "网页应用",
   "setHelpUpdates": "更新",
   "setHelpTwitter": "官方 Twitter",
-  "dropboxSetupDesc": "通过托管应用使用 Dropbox 需要一些额外注册信息。请创建您自己的 Dropbox 应用，并在下方填写app key。",
-  "dropboxAppKey": "Dropbox app key",
+  "dropboxSetupDesc": "在自行托管的应用中使用 Dropbox 需要一些额外配置。请创建您自己的 Dropbox 应用，并在下方填写其 key。",
+  "dropboxAppKey": "Dropbox 应用 key",
   "dropboxAppKeyDesc": "从您的 Dropbox 应用中复制 key (开发者设置)",
   "dropboxAppKeyHint": "你的公钥",
-  "dropboxAppSecret": "Dropbox密钥",
+  "dropboxAppSecret": "Dropbox 应用 secret",
   "dropboxAppSecretDesc": "密钥可在公钥下方找到",
   "dropboxFolder": "应用文件夹",
   "dropboxFolderDesc": "如果您的应用已经链接到整个 Dropbox (而不是应用文件夹)，请在这里设置您的 kdbx 文件所在文件夹。",
