--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "помилка",
+  "oneMinute": "одна хвилина",
+  "minutes": "{} хвилин",
+  "oneHour": "одна година",
+  "hours": "{} годин",
+  "oneDay": "один день",
+  "days": "{} днів",
+  "oneWeek": "один тиждень",
+  "oneMonth": "один місяць",
+  "oneYear": "один рік",
   "cache": "кеш",
   "file": "файл",
   "device": "пристрій",
@@ -245,7 +254,7 @@
   "detMenuCopyPassword": "Скопіювати пароль",
   "detMenuCopyUser": "Скопіювати логін",
   "detMenuCopyOtp": "Скопіювати одноразовий пароль",
-  "detSetupOtp": "Одноразовий пароль",
+  "detSetupOtp": "Одноразові коди",
   "detClone": "Зробити копію",
   "detCopyEntryToClipboard": "Скопіювати всі поля",
   "detClonedName": "Копіювати",
@@ -274,7 +283,7 @@
   "detOtpQrError": "Помилка зчитування QR коду...",
   "detOtpQrErrorBody": "На жаль, ми не змогли прочитати QR-код, будь ласка, спробуйте ще раз або зв'яжіться з авторами програми з докладною інформацією про помилки.",
   "detOtpQrWrong": "Невірний QR код",
-  "detOtpQrWrongBody": "Ваш QR-код був успішно відсканований, але він не містить даних одноразового пароля.",
+  "detOtpQrWrongBody": "QR-код успішно відскановано, але він не містить одноразового коду.",
   "detOtpField": "Одноразовий пароль",
   "detOtpClickToTouch": "Натисніть, щоб згенерувати",
   "detOtpGenerating": "Генерується...",
@@ -284,12 +293,23 @@
   "detRevealField": "Показати",
   "detHideField": "Сховати",
   "detAutoTypeField": "Автовведення",
+  "detIssuesHideTooltip": "Приховати це попередження",
+  "detIssueWeakPassword": "Цей пароль ненадійний. Рекомендується його змінити.",
+  "detIssuePoorPassword": "Цей пароль дуже ненадійний. Наполегливо рекомендується його змінити.",
+  "detIssuePwnedPassword": "Цей пароль було викрито з витоком даних, згідно з {}. Рекомендується його змінити.",
+  "detIssuePasswordCheckError": "При перевірці надійності пароля виникла помилка.",
+  "detIssueOldPassword": "Пароль застарілий.",
+  "detIssueCloseAlertHeader": "Приховати проблеми з паролями",
+  "detIssueCloseAlertBody": "Ви можете приховати це попередження різними способами:",
+  "detIssueCloseAlertEntry": "Не показувати для цього запису.",
+  "detIssueCloseAlertSettings": "Змінити глобальні налаштування",
   "autoTypeEntryFields": "Поля запису",
   "autoTypeModifiers": "Клавіші-модифікатори",
   "autoTypeKeys": "Ключі",
   "autoTypeLink": "ще",
   "autoTypeError": "помилка автоматичного введення",
   "autoTypeErrorGeneric": "Помилка виконання автоматичного введення: {}",
+  "autoTypeErrorAccessibilityMacOS": "Спроба відправити команду в програму виявилася невдалою. Це могло статися через відсутні дозволи. Натисніть тут для перегляду подробиць:",
   "autoTypeErrorGlobal": "Для використання комбінацій клавіш на рівні системи, зробіть активним вікно програми, в якому ви хочете ввести пароль",
   "autoTypeErrorNotInstalled": "{} не встановлений",
   "autoTypeHeader": "Автовведення: Оберіть",
@@ -300,7 +320,7 @@
   "autoTypeSelectionHintAction": "Ввести тільки пароль",
   "autoTypeSelectionHintOpt": "Ввести тільки логін",
   "autoTypeSelectionHintShift": "Інші поля",
-  "autoTypeSelectionOtp": "Одноразовий пароль",
+  "autoTypeSelectionOtp": "Одноразовий код",
   "appSecWarn": "Не безпечно!",
   "appSecWarnBody1": "Ви завантажили цю програму через незахищене з'єднання. Хтось може спостерігати за вами і викрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися, якщо тільки ви не впевнені в своїх діях.",
   "appSecWarnBody2": "Так, ваша база даних в зашифрованому вигляді, але ніхто не може гарантувати, що програма не була змінена на шляху до вас.",
@@ -314,6 +334,8 @@
   "appSaveError": "Помилка збереження",
   "appSaveErrorBody": "Помилка авто-збереження файлу",
   "appSaveErrorBodyMul": "Помилка авто-збереження файлів:",
+  "appSaveErrorExitLoseChanges": "Вийти без збереження змін",
+  "appSaveErrorExitLoseChangesBody": "Ви можете вийти з програми і втратити всі зміни, або відкрити налаштування й експортувати дані",
   "appSettingsError": "Помилка завантаження програми",
   "appSettingsErrorBody": "Сталася помилка при завантаженні налаштувань програми. Ретельно перевірте URL-адресу програми, або зверніться до адміністратора.",
   "appNotSupportedError": "Ваш браузер не підтримує деякі важливі функції, які ми використовуємо.",
@@ -345,16 +367,29 @@
   "setGenExtractingUpdate": "Вилучення оновлення...",
   "setGenCheckErr": "Помилка при завантаженні нової версії",
   "setGenNeverChecked": "Ніколи не перевіряти оновлення",
-  "setGenRestartToUpdate": "Для оновлення необхідно перезавантаження",
+  "setGenRestartToUpdate": "Перезапустити KeeWeb для оновлення",
   "setGenDownloadAndRestart": "Завантажити оновлення і перезавантажити программу",
   "setGenAppearance": "Вид",
   "setGenTheme": "Тема",
-  "setGenThemeFb": "Плоска синя",
+  "setGenThemeDefault": "Типова",
+  "setGenThemeDark": "Темна",
+  "setGenThemeLight": "Світла",
+  "setGenThemeBlue": "Плоска синя",
+  "setGenThemeFb": "Темна синя",
+  "setGenThemeBl": "Світла блакитна",
+  "setGenThemeBrown": "Коричнева",
   "setGenThemeDb": "Темна коричнева",
+  "setGenThemeLb": "Світла коричнева",
+  "setGenThemeTerminal": "Термінал",
   "setGenThemeTe": "Термінал ",
+  "setGenThemeLt": "Світла Термінал",
+  "setGenThemeHighContrast": "Високий контраст",
   "setGenThemeHc": "Високий контраст",
+  "setGenThemeDc": "Темний контраст",
+  "setGenThemeSol": "Сонячне затемнення",
   "setGenThemeSd": "Вицвіла темна",
   "setGenThemeSl": "Вицвіла світла",
+  "setGenMoreThemes": "Більше тем",
   "setGenLocale": "Мова",
   "setGenLocOther": "Інші мови доступні як плагіни",
   "setGenFontSize": "Розмір шрифту",
@@ -544,7 +579,7 @@
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
-  "setAboutLicComment": "Програма та всі вбудовані компоненти, які не мають загальнодоступного домену, ліцензовані на умовах MIT-ліцензії",
+  "setAboutLicComment": "Програма та всі вбудовані компоненти ліцензовані на умовах MIT-ліцензії, якщо не зазначено іншого",
   "setAboutFirst": "Ця програма з відкритим вихідним кодом створена {}",
   "setAboutSecond": "під ліцензією {}.",
   "setAboutSource": "Вихідний код і питання на {}.",
