--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -84,9 +84,9 @@
   "genShowPass": "Показати пароль",
   "grpTitle": "Група ",
   "grpSearch": "Увімкнути пошук записів у цій групі",
-  "grpAutoType": "Увімкнути автозаповнення",
+  "grpAutoType": "Увімкнути автовведення",
   "grpAutoTypeSeq": "Послідовність автовведення",
-  "grpAutoTypeSeqDefault": "Використовувати послідовність автовведення за замовчуванням",
+  "grpAutoTypeSeqDefault": "Використовувати типову послідовність автовведення",
   "grpTrash": "Видалити групу з усіма елементами",
   "tagTitle": "Тег",
   "tagTrash": "Видалити тег з усіх записів",
@@ -197,9 +197,11 @@
   "openListErrorBody": "Помилка завантаження списку файлів",
   "openShowAllFiles": "Показати всі файли",
   "openFileNoCacheError": "Файл не знайдено в кеші. Це може трапитися, якщо сховище браузера було очищено. Щоб відкрити файл, видаліть його з KeeWeb і додайте заново.",
+  "openChalRespHeader": "Виклик-Відповідь",
   "openChalRespLoading": "Список YubiKey завантажується",
   "openChalRespSelectYubiKey": "Оберіть YubiKey, який ви бажаєте використовувати",
   "openChalRespErrorEmpty": "Не знайдено жодного YubiKey",
+  "openChalRespErrorEmptyMac": "Вперше використовуєте цю функцію на macOS? KeeWeb необхідно додати до розділу спостереження введення в параметрах безпеки.",
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню, щоб завантажити його, або",
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
@@ -260,7 +262,7 @@
   "detClonedName": "Копіювати",
   "detAutoType": "Автовведення",
   "detAutoTypeSettings": "Налаштування автовведення",
-  "detAutoTypeEnabled": "Увімкнути автовведення для даного запису",
+  "detAutoTypeEnabled": "Увімкнути автовведення для цього запису",
   "detAutoTypeSequence": "Натискань клавіш",
   "detAutoTypeInput": "Введення",
   "detAutoTypeShortcutsDesc": "{} або {} в той час як додаток неактивний",
@@ -307,8 +309,8 @@
   "autoTypeModifiers": "Клавіші-модифікатори",
   "autoTypeKeys": "Ключі",
   "autoTypeLink": "ще",
-  "autoTypeError": "помилка автоматичного введення",
-  "autoTypeErrorGeneric": "Помилка виконання автоматичного введення: {}",
+  "autoTypeError": "Помилка автовведення",
+  "autoTypeErrorGeneric": "При виконанні автовведення виникла помилка: {}",
   "autoTypeErrorAccessibilityMacOS": "Спроба відправити команду в програму виявилася невдалою. Це могло статися через відсутні дозволи. Натисніть тут для перегляду подробиць:",
   "autoTypeErrorGlobal": "Для використання комбінацій клавіш на рівні системи, зробіть активним вікно програми, в якому ви хочете ввести пароль",
   "autoTypeErrorNotInstalled": "{} не встановлений",
@@ -390,6 +392,7 @@
   "setGenThemeSd": "Вицвіла темна",
   "setGenThemeSl": "Вицвіла світла",
   "setGenMoreThemes": "Більше тем",
+  "setGenAutoSwitchTheme": "Автоматично перемикатися між світлою й темною темами, якщо можливо",
   "setGenLocale": "Мова",
   "setGenLocOther": "Інші мови доступні як плагіни",
   "setGenFontSize": "Розмір шрифту",
@@ -426,12 +429,14 @@
   "setGenClearSeconds": "через {} секунд",
   "setGenClearMinute": "в хвилину",
   "setGenMinInstead": "Згортати програму замість закриття",
+  "setGenMinOnFieldCopy": "Згортати при копіюванні поля",
   "setGenLock": "Автоматичне блокування",
   "setGenLockMinimize": "При мінімізації",
   "setGenLockCopy": "Після копіювання пароля",
   "setGenLockAutoType": "При автовведенні",
   "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
+  "setGenDisableOfflineStorage": "Не зберігати кеш завантажених файлів у автономному сховищі",
   "setGenStorageLogout": "Вийти",
   "setGenShowAdvanced": "Показати додаткові налаштування (ці установки можуть бути небезпечні)",
   "setGenDevTools": "Засоби розробки",
@@ -440,6 +445,23 @@
   "setGenTryBetaWarningBody": "Будь ласка, збережіть всі файли і натисніть цю кнопку ще раз",
   "setGenShowAppLogs": "Журнал програми",
   "setGenReloadApp": "Перезапустити програму",
+  "setGenFieldLabelDblClickAutoType": "Автовведення при подвійному клацанні на назві полів",
+  "setGenUseLegacyAutoType": "Використовувати попередню версію автовведення (при наявності проблем)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Не використовувати Touch ID",
+  "setGenTouchIdMemory": "Відмикати з Touch ID лише коли KeeWeb працює",
+  "setGenTouchIdFile": "Завжди використовувати Touch ID замість головного пароля",
+  "setGenTouchIdPass": "Вимагати головний пароль через",
+  "setGenAudit": "Аудит",
+  "setGenAuditPasswords": "Показувати попередження про надійність пароля",
+  "setGenAuditPasswordEntropy": "Перевіряти довжину і випадковість пароля",
+  "setGenExcludePinsFromAudit": "Ніколи не перевіряти числові PIN-коди, наприклад, 123456",
+  "setGenCheckPasswordsOnHIBP": "Перевіряти паролі з використанням мережевого сервісу {}",
+  "setGenHelpHIBPLink": "тут",
+  "setGenAuditPasswordAge": "Застарілі паролі",
+  "setGenAuditPasswordAgeOff": "Не показувати застереження про застарілі паролі",
+  "setGenAuditPasswordAgeOneYear": "Показувати застереження для паролів старіших одного року",
+  "setGenAuditPasswordAgeYears": "Показувати застереження для паролів старіших {} років",
   "setFilePath": "Шлях до файлу",
   "setFileStorage": "Цей файл завантажений з {}.",
   "setFileIntl": "Цей файл зберігається у внутрішній пам'яті програми",
@@ -511,9 +533,11 @@
   "setFileFormatVersion": "Формат файлу",
   "setFileExportRaw": "Експортуючи ваші паролі",
   "setFileExportRawBody": "Експортований файл буде вміщати ваші паролі, які не будуть зашифровані. Бажаєте продовжити?",
+  "setFileDeviceIntro": "Одноразові коди з цього {} будуть показані в програмі.",
   "setFileDeviceSettings": "Налаштування",
   "setFileYubiKey": "YubiKey",
   "setFileDontUseYubiKey": "Не використовувати YubiKey",
+  "setFileRefreshYubiKeyList": "Оновити список",
   "setFileYubiKeyHeader": "YubiKey",
   "setShTitle": "Гарячі клавіші",
   "setShShowAll": "показати усі елементи",
@@ -524,7 +548,7 @@
   "setShCopyPass": "скопіювати пароль або вибране поле",
   "setShCopyUser": "скопіювати ім'я користувача",
   "setShCopyUrl": "скопіювати веб-сайт",
-  "setShAutoType": "перейти до попереднього запису",
+  "setShAutoType": "автовведення вибраного запису.",
   "setShPrev": "перейти до попереднього запису",
   "setShNext": "перейти до наступного запису",
   "setShCreateEntry": "створити запис",
@@ -570,12 +594,19 @@
   "setPlTranslateLink": "Перекласти програму на вашу мову",
   "setPlAutoUpdate": "Оновлювати автоматично",
   "setPlLoadGallery": "Завантажити галерею плагінів",
+  "setDevicesTitle": "Пристрої",
+  "setDevicesEnableUsb": "Увімкнути взаємодію з USB-пристроями",
+  "setDevicesYubiKeyIntro": "Рекомендується ознайомитися з {} перед використанням YubiKey.",
   "setDevicesYubiKeyIntroLink": "цю статтю",
+  "setDevicesYubiKeyToolsDesc": "Для можливості використання YubiKey в цьому режимі необхідно встановити інструмент {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} для отримання подробиць про цей інструмент.",
   "setDevicesYubiKeyToolsDescLink": "Натисніть тут",
   "setDevicesYubiKeyToolsStatusChecking": "Перевірка чи {} встановлений",
   "setDevicesYubiKeyToolsStatusOk": "{} встановлений",
   "setDevicesYubiKeyToolsStatusError": "{} не встановлений або не працює",
   "setDevicesYubiKeyOtpTitle": "Одноразові паролі",
+  "setDevicesYubiKeyOtpDesc": "YubiKey можна використовувати для генерування одноразових кодів для різних сервісів.",
+  "setDevicesYubiKeyOtpShowIcon": "Показувати піктограму на головному екрані",
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
